xforms/package/xforms_flimage.pas


function flimage_load(file:Pchar):PFL_IMAGE;cdecl;external;
function flimage_read(im:PFL_IMAGE):PFL_IMAGE;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function flimage_dump(para1:PFL_IMAGE; para2:Pchar; para3:Pchar):cint;cdecl;external;
function flimage_close(para1:PFL_IMAGE):cint;cdecl;external;
function flimage_alloc:PFL_IMAGE;cdecl;external;
function flimage_getmem(para1:PFL_IMAGE):cint;cdecl;external;
(* Const before type ignored *)
function flimage_is_supported(para1:Pchar):cint;cdecl;external;
(* Const before abstract_declarator ignored *)
(* Const before type ignored *)
function flimage_description_via_filter(para1:PFL_IMAGE; para2:PPchar; para3:Pchar; para4:cint):cint;cdecl;external;
(* Const before abstract_declarator ignored *)
(* Const before abstract_declarator ignored *)
function flimage_write_via_filter(para1:PFL_IMAGE; para2:PPchar; para3:PPchar; para4:cint):cint;cdecl;external;
function flimage_alloc:PFL_IMAGE;cdecl;external;
procedure flimage_free(para1:PFL_IMAGE);cdecl;external;
function flimage_display(para1:PFL_IMAGE; para2:TWindow):cint;cdecl;external;
function flimage_sdisplay(para1:PFL_IMAGE; para2:TWindow):cint;cdecl;external;
function flimage_convert(para1:PFL_IMAGE; para2:cint; para3:cint):cint;cdecl;external;
(* Const before type ignored *)
function flimage_type_name(_type:cint):Pchar;cdecl;external;
(* Const before type ignored *)
function flimage_add_text(para1:PFL_IMAGE; para2:Pchar; para3:cint; para4:cint; para5:cint; 
           para6:cuint; para7:cuint; para8:cint; para9:cdouble; para10:cdouble; 
           para11:cint):cint;cdecl;external;
(* Const before type ignored *)
function flimage_add_text_struct(para1:PFL_IMAGE; para2:PFLIMAGE_TEXT):cint;cdecl;external;
procedure flimage_delete_all_text(para1:PFL_IMAGE);cdecl;external;
(* Const before type ignored *)
function flimage_add_marker(para1:PFL_IMAGE; para2:Pchar; para3:cdouble; para4:cdouble; para5:cdouble; 
           para6:cdouble; para7:cint; para8:cint; para9:cint; para10:cuint; 
           para11:cuint):cint;cdecl;external;
(* Const before type ignored *)
function flimage_add_marker_struct(para1:PFL_IMAGE; para2:PFLIMAGE_MARKER):cint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function flimage_define_marker(para1:Pchar; para2:procedure (para1:PFLIMAGE_MARKER); para3:Pchar):cint;cdecl;external;
procedure flimage_delete_all_markers(para1:PFL_IMAGE);cdecl;external;
function flimage_render_annotation(para1:PFL_IMAGE; para2:TFL_WINDOW):cint;cdecl;external;
(* Const before type ignored *)
procedure flimage_error(para1:PFL_IMAGE; para2:Pchar; args:array of const);cdecl;external;
procedure flimage_error(para1:PFL_IMAGE; para2:Pchar);cdecl;external;
{ Built-in format supports  }
procedure flimage_enable_pnm;cdecl;external;
function flimage_set_fits_bits(para1:cint):cint;cdecl;external;
{ Output options  }
type
  PFLIMAGE_JPEG_OPTION = ^TFLIMAGE_JPEG_OPTION;
  TFLIMAGE_JPEG_OPTION = record
      quality : cint;
      smoothing : cint;
    end;

procedure flimage_jpeg_output_options(para1:PFLIMAGE_JPEG_OPTION);cdecl;external;
procedure flimage_pnm_output_options(para1:cint);cdecl;external;
procedure flimage_gif_output_options(para1:cint);cdecl;external;
function flimage_ps_options:PFLPS_CONTROL;cdecl;external;
const
  flimage_jpeg_options = flimage_jpeg_output_options;  
  flimage_pnm_options = flimage_pnm_output_options;  
  flimage_gif_options = flimage_gif_output_options;  
type
  Pblablabla = ^Tblablabla;
  Tblablabla =  cint;
  Const
    FLIMAGE_WRITABLE = FL_WRITE;
    FLIMAGE_READABLE = FL_READ;
;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
type
  PFLIMAGE_FORMAT_INFO = ^TFLIMAGE_FORMAT_INFO;
  TFLIMAGE_FORMAT_INFO = record
      formal_name : Pchar;
      short_name : Pchar;
      extension : Pchar;
      _type : cint;
      read_write : cint;
      annotation : cint;
    end;

function flimage_get_number_of_formats:cint;cdecl;external;
(* Const before type ignored *)
function flimage_get_format_info(para1:cint):PFLIMAGE_FORMAT_INFO;cdecl;external;
function fl_get_matrix(para1:cint; para2:cint; para3:cuint):pointer;cdecl;external;
function fl_make_matrix(para1:cint; para2:cint; para3:cuint; para4:pointer):pointer;cdecl;external;
procedure fl_free_matrix(para1:pointer);cdecl;external;
{ This function is retained for compatibility reasons only.
   It returns 1 always.  }
(* Const before type ignored *)
function fl_init_RGBdatabase(para1:Pchar):cint;cdecl;external;
(* Const before type ignored *)
function fl_lookup_RGBcolor(para1:Pchar; para2:Pcint; para3:Pcint; para4:Pcint):cint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function flimage_add_format(para1:Pchar; para2:Pchar; para3:Pchar; para4:cint; para5:TFLIMAGE_Identify; 
           para6:TFLIMAGE_Description; para7:TFLIMAGE_Read_Pixels; para8:TFLIMAGE_Write_Image):cint;cdecl;external;
procedure flimage_set_annotation_support(para1:cint; para2:cint);cdecl;external;
function flimage_getcolormap(para1:PFL_IMAGE):cint;cdecl;external;
procedure fl_select_mediancut_quantizer;cdecl;external;
{ Simple image processing routines  }
{#define FLIMAGE_SHARPEN        ( ( int** )( -1 ) ) }
{#define FLIMAGE_SMOOTH         ( ( int** )( -2 ) ) }
const
  FL_SMOOTH = FLIMAGE_SMOOTH;  
  FL_SHARPEN = FLIMAGE_SHARPEN;  
{ scale with no subpixel sampling  }
{ scale with  subpixel sampling  }
{ center warped image. default   }
{ flush right the warped image   }
{ fit the size  }
type
  Pblablabla = ^Tblablabla;
  Tblablabla =  cint;
  Const
    FLIMAGE_NOSUBPIXEL = 0;
    FLIMAGE_SUBPIXEL = 1;
    FLIMAGE_CENTER = 2;
    FLIMAGE_RIGHT = 8;
    FLIMAGE_ASPECT = 32;
    FLIMAGE_NOCENTER = FL_ALIGN_LEFT_TOP;
;
